# lox

./: .gitignore  .vimspector.json  CMakeLists.txt  conanfile.py
.clangd/index/: array.hpp.61E8FAA504CCF5B2.idx  chunk.cpp.53A480D728771CEC.idx  chunk.hpp.ADBDA7963BF02DD6.idx  debug.cpp.AE2A43A138ADF842.idx  debug.hpp.23A6DEA8970F755E.idx  main.cpp.6F00CCB84803637F.idx  memory.cpp.5A9FFA1C2F2D8EC2.idx  memory.hpp.638088C9C135135E.idx  test_chunk.cpp.B6C763E1802CC85E.idx  test_main.cpp.EF8DB557A34D3EC4.idx  value.cpp.B4D5E7A1A95EF829.idx  value.hpp.89445285433FDD2D.idx
include/: array.hpp  bits.hpp  chunk.hpp  compiler.hpp  debug.hpp  memory.hpp  object.hpp  scanner.hpp  value.hpp  virtual_machine.hpp
source/: bits.cpp  chunk.cpp  compiler.cpp  debug.cpp  main.cpp  memory.cpp  object.cpp  scanner.cpp  value.cpp  virtual_machine.cpp
tests/: test_bits.cpp  test_chunk.cpp
